<resources>
    <string name="app_name">App Medica</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_dashboard">ActivityDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Desconectarse</string>
    <string name="tvTexto">TextView</string>
    <string name="tvAlto">TextView</string>
    <string name="btnEnviar">Button</string>
    <string name="tvApellido">TextView</string>
    <string name="tvSexo">TextView</string>
    <string name="tvFecha">TextView</string>
    <string name="tvImc">TextView</string>
    <string name="tvNotas">TextView</string>
    <string name="tvValor">TextView</string>
    <string name="tvVariacion">TextView</string>
    <string name="tvDoctor">TextView</string>
    <string name="tvFechaVisita">TextView</string>
    <string name="tvLugar">TextView</string>
    <string name="tvNotasVisita">TextView</string>

    <string name="btnBascula">INTRODUCIR PESO</string>

    <!--Strings Nueva visita -->
    <string name="doctor1">Dr. Mercader</string>
    <string name="doctor2">Dra. Lorenz</string>
    <string name="doctor3">Dr. Williams</string>
    <string name="guardar">GUARDAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="elegir_fecha">ELEGIR FECHA</string>
    <string name="separadorPeso">,</string>
    <string name="introduce_tu_peso">INTRODUCE TU PESO</string>

</resources>
