<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Perfil" />

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvTexto" />

            <TextView
                android:id="@+id/tvApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvApellido" />

            <TextView
                android:id="@+id/tvAlto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvAlto" />

            <TextView
                android:id="@+id/tvSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvSexo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Peso" />

            <TextView
                android:id="@+id/tvFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvFecha" />

            <TextView
                android:id="@+id/tvImc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvImc" />

            <TextView
                android:id="@+id/tvNotas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvNotas" />

            <TextView
                android:id="@+id/tvValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvValor" />

            <TextView
                android:id="@+id/tvVariacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvVariacion" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Visitas" />

            <TextView
                android:id="@+id/tvDoctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvDoctor" />

            <TextView
                android:id="@+id/tvFechaVisita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvFechaVisita" />

            <TextView
                android:id="@+id/tvLugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvLugar" />

            <TextView
                android:id="@+id/tvNotasVisita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvNotasVisita" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>