<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityNuevaVisita">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:baselineAligned="false"
            android:text="Nueva Visita"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Fecha"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true" />

        <EditText
            android:id="@+id/edtHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Hora"
            android:inputType="time"
            android:focusable="false"
            android:clickable="true" />

        <EditText
            android:id="@+id/edtLugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Lugar"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtNotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Notas"
            android:inputType="textLongMessage" />

        <TextView
            android:id="@+id/tvSelectorMedico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="Seleccione médico"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <RadioGroup
            android:id="@+id/radioMedico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/doctor1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/doctor2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/doctor3" />

            <Button
                android:id="@+id/btnGuardarVisita"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="50dp"
                android:layout_weight="1"
                android:text="GUARDAR VISITA" />
        </RadioGroup>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>